--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "quote-files",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "文件中引用的其他文件列表",
   "main": "index.js",
   "scripts": {
     "test": "node test/test.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "laomu1988",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:laomu1988/quote-files.git"
+  }
 }
